--- a/web/lab1/client/style/DataTable.scss
+++ b/web/lab1/client/style/DataTable.scss
@@ -18,7 +18,17 @@
     border-bottom: 2px solid #666;
   }
 
-  tr:not(:first-child) td {
-    border-bottom: 1px solid #ccc;
+  tr:nth-child(2) {
+    background-color: lightcoral;
+  }
+
+  tr:not(:first-child) {
+    &:hover {
+      background: #ddd;
+    }
+
+    td {
+      border-bottom: 1px solid #ccc;
+    }
   }
 }
