--- a/web/lab1/client/style/MainPage.scss
+++ b/web/lab1/client/style/MainPage.scss
@@ -1,6 +1,6 @@
 #plot-canvas {
   width: 100%;
-  height: 100%;
+  height: 50vh;
 }
 
 #table-input {
@@ -14,9 +14,15 @@
   }
 }
 
+.container {
+  > tbody > tr > td {
+    vertical-align: top;
+  }
+}
+
 #page-base {
   height: 100%;
-  > tbody td {
+  > tbody > tr > td {
     width: 50%;
     height: 100%;
   }
