--- a/web/lab1/client/style/base.scss
+++ b/web/lab1/client/style/base.scss
@@ -8,7 +8,8 @@ body {
   margin: 0;
   font-family: Verdana, sans-serif;
   font-size: small;
-  overflow: hidden;
+  // overflow: hidden;
+  overflow-x: hidden;
 }
 
 .container {
