--- a/web/lab1/client/style/DataTable.scss
+++ b/web/lab1/client/style/DataTable.scss
@@ -3,6 +3,7 @@
   border-radius: 5px;
   border-style: hidden;
   box-shadow: 0 0 0 1px #666;
+  margin: 1%;
 
   tbody {
     width: 100%;
@@ -14,21 +15,29 @@
     padding: 5px;
   }
 
-  tr:first-child td {
-    border-bottom: 2px solid #666;
-  }
-
-  tr:nth-child(2) {
-    background-color: lightcoral;
-  }
-
-  tr:not(:first-child) {
-    &:hover {
-      background: #ddd;
+  tr {
+    &:first-child td {
+      color: white;
+      background: dimgrey;
+      border-bottom: 2px solid #666;
     }
 
-    td {
-      border-bottom: 1px solid #ccc;
+    &:nth-child(2) {
+      background: lightcoral;
+    }
+
+    &:not(:first-child) {
+      &:nth-child(odd) {
+        background: #eee;
+      }
+
+      &:hover {
+        background: #fcc;
+      }
+
+      td {
+        border-bottom: 1px solid #ccc;
+      }
     }
   }
 }
