--- a/web/lab1/client/style/MainPage.scss
+++ b/web/lab1/client/style/MainPage.scss
@@ -11,12 +11,23 @@
     }
 
     padding: 0;
+    padding: 1%;
   }
+
+  margin-top: 10%;
+  margin-left: 10%;
+}
+
+#table-result {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
   > tbody > tr > td {
     vertical-align: top;
+    padding: 1%;
   }
 }
 
@@ -31,4 +42,9 @@
 span[id^="error-msg"] {
   display: inline-block;
   color: red;
+}
+
+#clear-btn,
+#send-btn {
+  width: 100%;
 }
