--- a/web/lab1/client/style/index.scss
+++ b/web/lab1/client/style/index.scss
@@ -1,4 +1,4 @@
-@use "./base.scss";
-@use "./input.scss";
-@use "./MainPage.scss";
-@use "./DataTable.scss";
+@use "base";
+@use "input";
+@use "MainPage";
+@use "DataTable";
