--- a/web/lab1/client/style/input.scss
+++ b/web/lab1/client/style/input.scss
@@ -1,20 +1,4 @@
-@mixin round-plate {
-  border-style: solid;
-  border-color: darkgray;
-  border-radius: 5px;
-  border-width: 1px;
-  padding: 1ex;
-}
-
-@mixin hover-animation {
-  opacity: 0.7;
-  transition: 0.2s;
-
-  &:enabled:hover {
-    opacity: 1;
-    box-shadow: 2px 2px 4px 1px #2222;
-  }
-}
+@import "theme";
 
 input,
 select,
