--- a/web/lab1/client/style/MainPage.scss
+++ b/web/lab1/client/style/MainPage.scss
@@ -18,8 +18,9 @@
     padding: 1%;
   }
 
-  margin-top: 10%;
-  margin-left: 10%;
+  width: 80%;
+  margin-top: 5%;
+  margin-left: 5%;
 }
 
 #table-result {
