--- a/web/lab2/src/main/webapp/src/style/_theme.scss
+++ b/web/lab2/src/main/webapp/src/style/_theme.scss
@@ -15,3 +15,9 @@
     box-shadow: 2px 2px 4px 1px #2222;
   }
 }
+
+@mixin reset {
+  color: black;
+  font-family: Verdana, sans-serif;
+  font-size: small;
+}
