--- a/web/lab2/src/main/webapp/src/style/base.scss
+++ b/web/lab2/src/main/webapp/src/style/base.scss
@@ -9,8 +9,7 @@ body {
   min-height: 100%;
   width: 100%;
   margin: 0;
-  font-family: Verdana, sans-serif;
-  font-size: small;
+  @include reset;
   // overflow: hidden;
   overflow-x: hidden;
 }
