WEB-LAB2: added methods for points management

--- a/web/lab3/src/main/webapp/views/main.xhtml
+++ b/web/lab3/src/main/webapp/views/main.xhtml
@@ -13,8 +13,9 @@
     <ui:composition template="common.xhtml">
         <ui:define name="content">
             <p>#{userDAO.getPointResults(userDAO.findByLogin("1").get().id)}</p>
-            <h:button title="">
-            </h:button>
+            <h:form>
+                <h:commandButton action="#{userRepo.demo()}" value = "ADD"></h:commandButton>
+            </h:form>
         </ui:define>
     </ui:composition>
 </h:body>
