--- a/web/lab3/src/main/webapp/views/common.xhtml
+++ b/web/lab3/src/main/webapp/views/common.xhtml
@@ -4,12 +4,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
 >
 <f:view contentType="text/html;charset=UTF-8" encoding="UTF-8">
     <h:head>
         <h:outputStylesheet library="primefaces" name="components.css"/>
-<!--        <h:outputStylesheet library="css" name="static/dist/style/MainPage.css"/>-->
+        <h:outputStylesheet library="css" name="MainPage.css"/>
     </h:head>
     <h:body>
         <ui:insert name="header">
