WEB-LAB3: form validation improvements & point processing

--- a/web/lab3/src/main/webapp/views/components/table.xhtml
+++ b/web/lab3/src/main/webapp/views/components/table.xhtml
@@ -20,7 +20,7 @@
             var="i"
             rowIndexVar="idx"
     >
-
+        <p:autoUpdate/>
         <p:column headerText="ID">
             <h:outputText value="#{idx+1}"/>
         </p:column>
