--- a/web/lab3/src/main/webapp/views/components/checkForm.xhtml
+++ b/web/lab3/src/main/webapp/views/components/checkForm.xhtml
@@ -14,8 +14,7 @@
 
                 <div class="field">
                     <p:outputLabel for="rInput" value="Select area polygon scale R"/>
-                    <br/>
-                    <p:inputText id="rInput" value="#{areaConfig.r}">
+                    <p:inputText id="rInput" value="#{areaConfig.r}" maxlength="8">
                         <f:converter converterId="jakarta.faces.Double"/>
                         <p:ajax update="point-check-form:sendBtn" event="keyup"/>
                     </p:inputText>
@@ -28,7 +27,7 @@
                         <p:ajax process="rInput" update="point-check-form:sendBtn" event="slideEnd"/>
                     </p:slider>
                     <l:updatableMessage for="rInput"/>
-                    <small id="rInput-help">Range: #{pointConstraints.RRange.toString()}</small>
+                    <small id="rInput-help">Axis scale. Range: #{pointConstraints.RRange.toString()}</small>
                 </div>
 
                 <div class="field">
@@ -38,7 +37,10 @@
                             value="#{pointCheckRequest.x}"
                             min="#{pointConstraints.XRange.min}"
                             max="#{pointConstraints.XRange.max}"
-                            stepFactor="0.1">
+                            stepFactor="0.1"
+                            maxlength="8"
+                            round="false"
+                    >
                         <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>
                         <l:ajaxPushForm form="point-check-form" update="sendBtn" event="valueChange"/>
                     </p:spinner>
@@ -48,7 +50,7 @@
 
                 <div class="field">
                     <p:outputLabel for="yInput" value="Enter Y"/>
-                    <p:inputText id="yInput" required="true" value="#{pointCheckRequest.y}">
+                    <p:inputText id="yInput" required="true" value="#{pointCheckRequest.y}" maxlength="8">
                         <f:converter converterId="jakarta.faces.Double"/>
                         <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>
                     </p:inputText>
