WEB-LAB3: point canvas

--- a/web/lab3/src/main/webapp/views/common.xhtml
+++ b/web/lab3/src/main/webapp/views/common.xhtml
@@ -11,6 +11,7 @@
     <h:head>
         <h:outputStylesheet library="primefaces" name="components.css"/>
         <h:outputStylesheet library="css" name="MainPage.css"/>
+        <ui:insert name="head"/>
     </h:head>
     <h:body>
         <ui:insert name="header">
