--- a/web/lab3/src/main/webapp/views/main.xhtml
+++ b/web/lab3/src/main/webapp/views/main.xhtml
@@ -4,20 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
 >
-<h:body>
-    <ui:composition template="common.xhtml">
-        <ui:define name="content">
-            <h:form>
-                <h:commandButton action="#{pointCheckController.test()}" value = "ADD"/>
-            </h:form>
-
-            <ui:include src="components/checkForm.xhtml"/>
-            <ui:include src="components/table.xhtml"/>
-
-        </ui:define>
-    </ui:composition>
-</h:body>
+<ui:composition template="common.xhtml">
+    <ui:define name="head">
+        <h:outputScript library="js" name="views/MainPage.js" target="head"/>
+    </ui:define>
+    <ui:define name="content">
+        <ui:include src="components/canvas.xhtml"/>
+        <ui:include src="components/checkForm.xhtml"/>
+        <ui:include src="components/table.xhtml"/>
+    </ui:define>
+</ui:composition>
 </html>
