WEB-LAB3: point canvas

--- a/web/lab3/src/main/webapp/views/components/checkForm.xhtml
+++ b/web/lab3/src/main/webapp/views/components/checkForm.xhtml
@@ -19,6 +19,7 @@
                         <p:ajax update="point-check-form:sendBtn" event="keyup"/>
                     </p:inputText>
                     <p:slider
+                            id="rSlider"
                             for="rInput"
                             minValue="#{pointConstraints.RRange.min}"
                             maxValue="#{pointConstraints.RRange.max}"
