--- a/web/lab3/src/main/webapp/src/css/base.scss
+++ b/web/lab3/src/main/webapp/src/css/base.scss
@@ -12,7 +12,7 @@ body {
   width: 100%;
   margin: 0;
   @include reset;
-  // overflow: hidden;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
@@ -30,6 +30,6 @@ header {
 }
 
 .card {
-  padding: 1%;
-  margin: 1%;
+  padding: 8px;
+  //margin: 1%;
 }
