--- a/web/lab3/src/main/webapp/views/components/header.xhtml
+++ b/web/lab3/src/main/webapp/views/components/header.xhtml
@@ -2,12 +2,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui" xmlns:h="http://java.sun.com/jsf/html"
+>
 <ui:composition>
-   <h:commandLink action="#{navigation.toMain}">Main</h:commandLink>
-   <h:commandLink action="#{navigation.toPoints}">Main</h:commandLink>
+    <h:form id="nav" rendered="#{not empty requestScope.user}">
+        <div class="card">
+            <p:menubar>
+                <p:menuitem value="Home" outcome="#{navigation.toHome()}" icon="pi pi-fw pi-home"/>
+                <p:menuitem value="Points" outcome="#{navigation.toPoints()}" icon="pi pi-fw pi-map-marker"/>
+
+                <p:divider layout="vertical"/>
+
+                <f:facet name="options">
+                    <p:tag styleClass="mr-2" icon="pi pi-user" value="Бардин Петр Алексеевич"/>
+                    <p:tag styleClass="mr-2" icon="pi pi-users" value="P3219"/>
+                    <p:tag styleClass="mr-2" icon="pi pi-hashtag" severity="success" value="2931"/>
+                </f:facet>
+                <p:menuitem value="Logout" icon="pi pi-fw pi-sign-out" styleClass="ui-button-info"/>
+            </p:menubar>
+        </div>
+    </h:form>
 </ui:composition>
 </html>
