--- a/web/lab3/src/main/webapp/views/points.xhtml
+++ b/web/lab3/src/main/webapp/views/points.xhtml
@@ -4,16 +4,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
 >
-<h:head>
-</h:head>
-<h:body>
-    <ui:composition template="common.xhtml">
-        <ui:define name="content">
-            <h:button>test</h:button>
-        </ui:define>
-    </ui:composition>
-</h:body>
+<ui:composition template="common.xhtml">
+    <ui:define name="head">
+        <h:outputScript library="js" name="views/MainPage.js" target="head"/>
+    </ui:define>
+    <ui:define name="content">
+
+        <div class="grid">
+            <div class="col">
+                <ui:include src="components/canvas.xhtml"/>
+                <ui:include src="components/checkForm.xhtml"/>
+            </div>
+            <div class="col">
+                <ui:include src="components/table.xhtml"/>
+            </div>
+        </div>
+    </ui:define>
+</ui:composition>
 </html>
