--- a/web/lab3/src/main/webapp/views/components/checkForm.xhtml
+++ b/web/lab3/src/main/webapp/views/components/checkForm.xhtml
@@ -16,7 +16,8 @@
                     <p:outputLabel for="rInput" value="Select area polygon scale R"/>
                     <p:inputText id="rInput" value="#{areaConfig.r}" maxlength="8">
                         <f:converter converterId="jakarta.faces.Double"/>
-                        <p:ajax update="point-check-form:sendBtn" event="keyup"/>
+                        <p:clientValidator event="keyup"/>
+                        <!-- <p:ajax update="point-check-form:sendBtn" event="keyup"/>-->
                     </p:inputText>
                     <p:slider
                             id="rSlider"
@@ -25,7 +26,8 @@
                             maxValue="#{pointConstraints.RRange.max}"
                             step="0.25"
                     >
-                        <p:ajax process="rInput" update="point-check-form:sendBtn" event="slideEnd"/>
+                        <p:clientValidator event="slideEnd"/>
+                        <!-- <p:ajax process="rInput" update="point-check-form:sendBtn" event="slideEnd"/>-->
                     </p:slider>
                     <l:updatableMessage for="rInput"/>
                     <small id="rInput-help">Axis scale. Range: #{pointConstraints.RRange.toString()}</small>
@@ -42,8 +44,10 @@
                             maxlength="8"
                             round="false"
                     >
-                        <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>
-                        <l:ajaxPushForm form="point-check-form" update="sendBtn" event="valueChange"/>
+                        <p:clientValidator event="keyup"/>
+                        <p:clientValidator event="valueChange"/>
+                        <!-- <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>-->
+                        <!-- <l:ajaxPushForm form="point-check-form" update="sendBtn" event="valueChange"/>-->
                     </p:spinner>
                     <l:updatableMessage for="xInput"/>
                     <small id="xInput-help">Point X coordinate. Range: #{pointConstraints.XRange.toString()}</small>
@@ -53,7 +57,9 @@
                     <p:outputLabel for="yInput" value="Enter Y"/>
                     <p:inputText id="yInput" required="true" value="#{pointCheckRequest.y}" maxlength="8">
                         <f:converter converterId="jakarta.faces.Double"/>
-                        <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>
+                        <p:clientValidator event="keyup"/>
+
+                        <!-- <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>-->
                     </p:inputText>
                     <l:updatableMessage for="yInput"/>
                     <small id="yInput-help">Point Y coordinate. Range: #{pointConstraints.YRange.toString()}</small>
@@ -62,9 +68,10 @@
                 <p:commandButton
                         id="sendBtn"
                         value="Check"
-                        disabled="#{!checkUtils.isFormValid('point-check-form')}"
+                        validateClient="true"
                         action="#{pointCheckController.doCheck()}"
                 />
+                <!-- disabled="#{!checkUtils.isFormValid('point-check-form')}"-->
             </div>
         </h:form>
     </div>
