WEB-LAB3: client validation for canvas calls

--- a/web/lab3/src/main/webapp/views/components/canvas.xhtml
+++ b/web/lab3/src/main/webapp/views/components/canvas.xhtml
@@ -13,7 +13,7 @@
                 process="canvas-form"
         />
         <p:remoteCommand
-                name="remoteGetPoints"
+                name="remoteGetNewPoints"
                 action="#{canvasCheckController.getPoints}"
                 process="canvas-form"
         />
