--- a/web/lab3/src/main/webapp/views/components/checkForm.xhtml
+++ b/web/lab3/src/main/webapp/views/components/checkForm.xhtml
@@ -14,10 +14,10 @@
 
                 <div class="field">
                     <p:outputLabel for="rInput" value="Select area polygon scale R"/>
-                    <p:inputText id="rInput" value="#{areaConfig.r}" maxlength="8">
+                    <p:inputText id="rInput" value="#{areaConfig.r}" maxlength="6">
                         <f:converter converterId="jakarta.faces.Double"/>
                         <p:clientValidator event="keyup"/>
-                        <!-- <p:ajax update="point-check-form:sendBtn" event="keyup"/>-->
+                        <p:ajax event="keyup"/>
                     </p:inputText>
                     <p:slider
                             id="rSlider"
@@ -25,10 +25,8 @@
                             minValue="#{pointConstraints.RRange.min}"
                             maxValue="#{pointConstraints.RRange.max}"
                             step="0.25"
-                    >
-                        <p:clientValidator event="slideEnd"/>
-                        <!-- <p:ajax process="rInput" update="point-check-form:sendBtn" event="slideEnd"/>-->
-                    </p:slider>
+                            onSlideEnd="$('#point-check-form\\:rInput').trigger('keyup')"
+                    />
                     <l:updatableMessage for="rInput"/>
                     <small id="rInput-help">Axis scale. Range: #{pointConstraints.RRange.toString()}</small>
                 </div>
@@ -37,17 +35,13 @@
                     <p:outputLabel for="xInput" value="Select X"/>
                     <p:spinner
                             id="xInput"
-                            value="#{pointCheckRequest.x}"
                             min="#{pointConstraints.XRange.min}"
                             max="#{pointConstraints.XRange.max}"
+                            value="#{pointCheckRequest.x}"
                             stepFactor="0.1"
-                            maxlength="8"
-                            round="false"
                     >
                         <p:clientValidator event="keyup"/>
                         <p:clientValidator event="valueChange"/>
-                        <!-- <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>-->
-                        <!-- <l:ajaxPushForm form="point-check-form" update="sendBtn" event="valueChange"/>-->
                     </p:spinner>
                     <l:updatableMessage for="xInput"/>
                     <small id="xInput-help">Point X coordinate. Range: #{pointConstraints.XRange.toString()}</small>
@@ -55,11 +49,9 @@
 
                 <div class="field">
                     <p:outputLabel for="yInput" value="Enter Y"/>
-                    <p:inputText id="yInput" required="true" value="#{pointCheckRequest.y}" maxlength="8">
+                    <p:inputText id="yInput" value="#{pointCheckRequest.y}" maxlength="6">
                         <f:converter converterId="jakarta.faces.Double"/>
                         <p:clientValidator event="keyup"/>
-
-                        <!-- <l:ajaxPushForm form="point-check-form" update="sendBtn" event="keyup"/>-->
                     </p:inputText>
                     <l:updatableMessage for="yInput"/>
                     <small id="yInput-help">Point Y coordinate. Range: #{pointConstraints.YRange.toString()}</small>
@@ -71,7 +63,6 @@
                         validateClient="true"
                         action="#{pointCheckController.doCheck()}"
                 />
-                <!-- disabled="#{!checkUtils.isFormValid('point-check-form')}"-->
             </div>
         </h:form>
     </div>
