WEB-LAB3: authorization fixes and navigation connected to auth

--- a/web/lab3/src/main/webapp/views/login.xhtml
+++ b/web/lab3/src/main/webapp/views/login.xhtml
@@ -4,20 +4,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui" xmlns:l="http://lab3.itmo.bardinpetr.ru/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:l="http://lab3.itmo.bardinpetr.ru/facelets"
 >
-<ui:composition template="common.xhtml">
-    <ui:define name="content">
+<f:view contentType="text/html;charset=UTF-8" encoding="UTF-8">
+    <h:head>
+        <h:outputStylesheet library="primefaces" name="components.css"/>
+        <h:outputStylesheet library="css" name="MainPage.css"/>
+    </h:head>
+    <h:body>
         <h:form>
             <p:outputLabel for="login" value="Email:"/>
-            <p:inputText id="login" type="email" value="#{loginPageBean.username}"/>
+            <p:inputText id="login" type="email" value="#{loginBean.username}"/>
             <l:updatableMessage for="login"/>
             <p:outputLabel for="password" value="Password:"/>
-            <p:inputText id="password" type="password" value="#{loginPageBean.password}"/>
+            <p:inputText id="password" type="password" value="#{loginBean.password}"/>
             <l:updatableMessage for="password"/>
-            <p:commandButton action="#{loginPageBean.doLogin()}" value="Login"/>
-            <p:commandButton action="#{loginPageBean.doRegister()}" value="Register"/>
+            <p:commandButton action="#{loginBean.doLogin}" value="Login"/>
+            <p:commandButton action="#{loginBean.doRegister}" value="Register"/>
         </h:form>
-    </ui:define>
-</ui:composition>
+    </h:body>
+</f:view>
 </html>
